--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@ $primary-color: #ffd700;
 // @font-face rule tells browser that this is a custom font I want to use
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url('./assets/fonts/helvetica-neu.ttf') format('ttf');
+  src: url('./assets/fonts/helvetica-neu.ttf') format('truetype');
 }
 
 @font-face {
@@ -25,5 +25,5 @@ $primary-color: #ffd700;
 // default font for input and textarea
 input,
 textarea {
-  font-family: 'Helvetica Neue';
+  font-family: 'Helvetica Neue', sans-serif;
 }
