--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@ $primary-color: #ffd700;
 
 // import animate.css library to ensure animation classes are bundled into app's final CSS
 @import 'animate.css';
+@import '~loaders.css/src/animations/pacman.scss';
 
 // @font-face rule tells browser that this is a custom font I want to use
 @font-face {
@@ -26,4 +27,18 @@ $primary-color: #ffd700;
 input,
 textarea {
   font-family: 'Helvetica Neue', sans-serif;
+}
+
+.loader-active {
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  animation: fadeOut 1s 1s;
+  animation-fill-mode: forwards;
 }
