--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -39,17 +39,9 @@
 }
 
 .about-page,
-.contact-page {
-    .text-zone {
-        position: absolute;
-        left: 10%;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 35%;
-        vertical-align: middle;
-        display: table-cell;
-        max-height: 90%;
-    }
+.contact-page,
+.portfolio-page {
+    
 
     h1 {
         font-size: 53px;
@@ -110,5 +102,16 @@
         &:hover {
             color: #fff;
         }
+    }
+
+    .text-zone {
+        position: absolute;
+        left: 10%;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 35%;
+        vertical-align: middle;
+        display: table-cell;
+        max-height: 90%;
     }
 }
